# keyboard-ffi

./: README.md
keyboard/: README.md  pubspec.yaml
keyboard/lib/: keyboard.dart
keyboard_macos/: README.md  ffigen.yaml  pubspec.yaml
keyboard_macos/lib/: keyboard_macos.dart
keyboard_macos/lib/src/: keys.dart  special_keys.dart
keyboard_macos/macos/: keyboard_macos.podspec
keyboard_macos/macos/Classes/: keyboard_macos.c
keyboard_macos/src/: CMakeLists.txt  keyboard_macos.c  keyboard_macos.h
keyboard_platform_interface/: README.md  pubspec.yaml
keyboard_platform_interface/lib/: keyboard_platform_interface.dart
keyboard_platform_interface/lib/src/: interface.dart  platform.dart
